--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
 
 <div class="bottom-container">
-  <a class="footer-link" href="https://www.linkedin.com/in/aravinth-s-49926a1b0?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B9SPms%2BOkTNW0IasPDh03oQ%3D%3D">LinkedIn</a>
-  <a class="footer-link" href="https://twitter.com/Aravinth232001">Twitter</a>
-  <a class="footer-link" href="http://127.0.0.1:5500/index.html">Website</a>
+  <a class="footer-link" href="https://www.linkedin.com/in/aravinth-s-49926a1b0?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B9SPms%2BOkTNW0IasPDh03oQ%3D%3D" target="_blank">LinkedIn</a>
+  <a class="footer-link" href="https://twitter.com/Aravinth232001" target="_blank">Twitter</a>
+  <a class="footer-link" href="http://127.0.0.1:5500/index.html" target="_blank">Website</a>
   <p class="copy-right">&#169; 2021 Aravinth.</p>
 </div>
     </body>
